# fern

./: .dockerignore  .gitattributes  .gitignore  .out  .woodpecker.yml  Cargo.toml  Dockerfile  README.md  TODO.md  ast.dot  bench.sh  check.sh  ci-base.dockerfile  design.md  fern.g  heaptrack.fern.83846.zst  json.g  kitty  kitty.conf  output.txt  perf.sh  rust-toolchain.toml  test.txt  tmux.sh  woodpecker-ci.yml
.cargo/: config
.github/workflows/: docker-image.yml
a6935cadf45adb6800456df3e75ef84ce893d2d1/: manifest.json
benches/: json_lexer.rs  lexer.rs
ci/: .woodpecker.yml  Dockerfile  bench.sh  ci-base.dockerfile  woodpecker.yml
data/: example.fern  full.fern  full.json  test.eslang  test.fern  test.json  test.lua
data/docs/: syntax.md
data/grammar/: .gitignore  eslang.g  eslang.lg  eslang_keywords.lg  fern-fnf.g  fern.g  fern.lg  json.g  json.lg  keywords.lg  lua-fnf.g  lua.g  old_fern.g  temp.g  test.lg
data/json/: 100KB.json  100MB.json  10KB.json  10MB.json  1KB.json  1MB.json
data/old/: fern.rs  old.rs  server.rs
json/: 100KB.json  100MB.json  10KB.json  10MB.json  1GB.json  1KB.json  1MB.json  250MB.json  500KB.json  500MB.json  50MB.json
scripts/: .gdbinit  .gdbinit.py  .gitignore  blogger-env  blogger-output  build.sh  debug.sh  dump.sh  run.sh  script1.sh  script2.sh  test.sh  web.sh  webbuild.sh  webdev.sh
src/: analysis.rs  cfg.rs  error.rs  eslang.rs  fern.rs  grammar.rs  integration.rs  ir.rs  json.rs  lexer.rs  lib.rs  main.rs  old.rs  parser.rs  parsetree.rs  server.rs  slab.rs
src/analysis/: mod.rs
src/grammar/: error.rs  lexical_grammar.rs  lg.rs  mod.rs  opg.rs  papa.py  printing.rs  reader.rs  transform.rs
src/lexer/: error.rs  fern.rs  json.rs  lua.rs  mod.rs
src/parser/: fern.rs  fern_ast.rs  fern_ir.rs  fern_transform.rs  json.rs  mod.rs  print.rs  tree.rs
tests/: grammar.rs  integration.rs  lexer.rs  lua.rs
tests/common/: lexing.rs  mod.rs
tests/data/: let_stmt.testfile  max.testfile
web/: .gitignore  Gemfile  README.md  _config.yaml  build.ts  bun.lockb  index.html  index.js  package.json  references.bib  test.html
web/docs/: home.adoc  index.html  test.adoc
web/public/: index.css  index.html
web/src/: compiler.css  compiler.html  doc.css  header.css  index.adoc  index.html  plain.css
web/src/_includes/: default-head.html  header.html
web/src/_layouts/: default.html  doc.html
web/src/docs/: index.adoc  parallel.adoc  test.adoc
