[package]
name = "fern"
version = "0.1.0"
edition = "2021"

[lib]
name = "core"
path = "src/lib.rs"

[[bin]]
name = "fern"
path = "src/main.rs"

[dependencies]
tinyrand = { version = "0.5.0", optional = false }
crossbeam = { version = "*", optional = false }
crossbeam-deque = { version = "0.8.3", optional = false }
crossbeam-queue = { version = "*", optional = false }
crossbeam-channel = { version = "0.5.7", optional = false }
crossbeam-skiplist = { version = "0.1", optional = false }
memmap = { version = "0.7.0", optional = false }
serde = { version = "1.0", features = ["derive"] }
flexi_logger = { version = "0.25", features = ["specfile_without_notification", "colors"] }
log = "0.4"
ciborium = "0.2.0"
futures = { version = "0.3" }
tokio = { version = "1.0", features = ["rt", "macros"] }
hyper = { version = "0.14", features = ["server", "http1", "http2", "tcp"] }
tungstenite = { version = "0.12", default-features = false }
tokio-tungstenite = { version = "0.13" }
linked_hash_set = "0.1.4"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "lexer"
harness = false

[profile.test]
debug = true

[profile.dev]
debug = true