[package]
name = "fern"
version = "0.1.0"
edition = "2021"

# [lib]
# name = "ferncore"
# path = "src/lib.rs"
# crate-type = ["cdylib", "rlib"]

# [features]
# build-binary = ["memmap"]

# [[bin]]
# name = "fern"
# path = "src/main.rs"
# required-features = ["build-binary"]

[dependencies]
tinyrand = { version = "*", optional = false }
crossbeam = { version = "*", optional = false }
crossbeam-deque = { version = "*", optional = false }
crossbeam-queue = { version = "*", optional = false }
crossbeam-channel = { version = "*", optional = false }
crossbeam-skiplist = { version = "*", optional = false }
memmap = { version = "*" }
wasm-bindgen = { version = "0.2.90" }
serde = { version = "*", features = ["derive"] }
flexi_logger = { version = "*", features = ["specfile_without_notification", "colors"] }
log = "*"
futures = { version = "*" }
simple-error = "*"
dot = "*"
wasm-logger = "0.2.0"
bittyset = "*"
console_error_panic_hook = "0.1.7"
regex-syntax = "0.8.2"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "json_lexer"
harness = false

[profile.test]
debug = true

[profile.dev]
debug = true
